--- a/package.yaml
+++ b/package.yaml
@@ -50,7 +50,7 @@ dependencies:
   - criterion            >= 1.5.0 && < 1.6
   - generic-arbitrary    >= 0.1.0 && < 0.2
   - QuickCheck           >= 2.12.0 && < 2.14
-  - wl-pprint-text       >= 1.2.0 && < 1.3
+  - prettyprinter        >= 1.2   && < 1.6
   - pretty-simple        >= 2.0   && < 3.3
 
 library:
