--- a/zkp.cabal
+++ b/zkp.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4380014159c31ad26fb39c85d6627e4b355fb6c8d65444cf6d8ac4724550ad25
+-- hash: ba8dafc68257acb450b8c1b8c1d5cd7c351ac8bdf45ea3314d4a4e43bd35683c
 
 name:           zkp
 version:        0.1.0
@@ -52,11 +52,11 @@ library
     , pairing >=1.0.0 && <1.1
     , poly >=0.3.2 && <0.4
     , pretty-simple >=2.0 && <3.3
+    , prettyprinter >=1.2 && <1.6
     , protolude >=0.2.4 && <0.3
     , semirings >=0.5.0 && <0.6
     , text >=1.2 && <2.0
     , vector >=0.12.0 && <0.13
-    , wl-pprint-text >=1.2.0 && <1.3
   default-language: Haskell2010
 
 executable zkp
@@ -93,11 +93,11 @@ executable zkp
     , pairing >=1.0.0 && <1.1
     , poly >=0.3.2 && <0.4
     , pretty-simple >=2.0 && <3.3
+    , prettyprinter >=1.2 && <1.6
     , protolude >=0.2.4 && <0.3
     , semirings >=0.5.0 && <0.6
     , text >=1.2 && <2.0
     , vector >=0.12.0 && <0.13
-    , wl-pprint-text >=1.2.0 && <1.3
     , zkp
   default-language: Haskell2010
 
@@ -135,6 +135,7 @@ test-suite test-zkp
     , pairing >=1.0.0 && <1.1
     , poly >=0.3.2 && <0.4
     , pretty-simple >=2.0 && <3.3
+    , prettyprinter >=1.2 && <1.6
     , protolude >=0.2.4 && <0.3
     , semirings >=0.5.0 && <0.6
     , tasty
@@ -143,6 +144,5 @@ test-suite test-zkp
     , tasty-quickcheck
     , text >=1.2 && <2.0
     , vector >=0.12.0 && <0.13
-    , wl-pprint-text >=1.2.0 && <1.3
     , zkp
   default-language: Haskell2010
