--- a/zkp.cabal
+++ b/zkp.cabal
@@ -1,15 +1,22 @@
 cabal-version:      1.12
+
+-- This file has been generated from package.yaml by hpack version 0.33.0.
+--
+-- see: https://github.com/sol/hpack
+--
+-- hash: dacfcfc9c3feeeb9ef3ad3c37cff390c84fa0c0826ce898e74f57fe067ab19ba
+
 name:               zkp
 version:            0.1.0
-license:            AllRightsReserved
-license-file:       LICENSE
-copyright:          2016-2020 Adjoint Inc
-maintainer:         stephen@adjoint.io
-author:             Adjoint Inc.
-homepage:           https://github.com/adjoint-io/zkp#readme
 synopsis:           Zero Knowledge Proof Protocol
 description:        Zero Knowledge Proof Protocol
 category:           Cryptography
+homepage:           https://github.com/adjoint-io/zkp#readme
+author:             Adjoint Inc.
+maintainer:         stephen@adjoint.io
+copyright:          2016-2020 Adjoint Inc
+license:            AllRightsReserved
+license-file:       LICENSE
 build-type:         Simple
 extra-source-files:
   README.md
@@ -17,9 +24,8 @@ extra-source-files:
 
 library
   exposed-modules:    Protocol.Groth
-  hs-source-dirs:     src
   other-modules:      Poly
-  default-language:   Haskell2010
+  hs-source-dirs:     src
   default-extensions:
     NoImplicitPrelude
     GADTs
@@ -46,24 +52,25 @@ library
     , pairing              >=1.0.0  && <1.1
     , poly                 >=0.3.2  && <0.4
     , pretty-simple        >=2.0    && <3.3
-    , prettyprinter        >=1.2    && <1.6
-    , protolude            >=0.2.4  && <0.3
+    , prettyprinter        >=1.2    && <1.7
+    , protolude            >=0.2.4  && <0.4
     , QuickCheck           >=2.12.0 && <2.14
     , semirings            >=0.5.0  && <0.6
     , SHA                  >=1.6.4  && <1.7
     , text                 >=1.2    && <2.0
     , vector               >=0.12.0 && <0.13
 
+  default-language:   Haskell2010
+
 executable zkp
   main-is:            Main.hs
-  hs-source-dirs:     exe
   other-modules:
     Prove
     Reference
     Setup
     Verify
 
-  default-language:   Haskell2010
+  hs-source-dirs:     exe
   default-extensions:
     NoImplicitPrelude
     GADTs
@@ -94,8 +101,8 @@ executable zkp
     , pairing               >=1.0.0    && <1.1
     , poly                  >=0.3.2    && <0.4
     , pretty-simple         >=2.0      && <3.3
-    , prettyprinter         >=1.2      && <1.6
-    , protolude             >=0.2.4    && <0.3
+    , prettyprinter         >=1.2      && <1.7
+    , protolude             >=0.2.4    && <0.4
     , QuickCheck            >=2.12.0   && <2.14
     , semirings             >=0.5.0    && <0.6
     , SHA                   >=1.6.4    && <1.7
@@ -103,17 +110,18 @@ executable zkp
     , vector                >=0.12.0   && <0.13
     , zkp
 
+  default-language:   Haskell2010
+
 test-suite test-zkp
   type:               exitcode-stdio-1.0
   main-is:            Test.hs
-  hs-source-dirs:     test
   other-modules:
     Paths_zkp
     Test.Arithmetic
     Test.Groth
     Test.Poly
 
-  default-language:   Haskell2010
+  hs-source-dirs:     test
   default-extensions:
     NoImplicitPrelude
     GADTs
@@ -124,34 +132,36 @@ test-suite test-zkp
     -Wall -Wno-name-shadowing -threaded -rtsopts -with-rtsopts=-N
 
   build-depends:
-      aeson                >=1.4.0    && <1.5
-    , arithmetic-circuits  >=0.2.0    && <0.3
-    , base                 >=4.12     && <4.14
-    , bytestring           >=0.10.8   && <0.11
-    , containers           >=0.6.0    && <0.7
-    , criterion            >=1.5.0    && <1.6
-    , crypto-numbers       >=0.2.7    && <0.3
-    , directory            >=1.3.3    && <1.4
-    , elliptic-curve       >=0.3.0    && <0.4
-    , entropy              >=0.4.1    && <0.5
-    , filepath             >=1.4.2    && <1.5
-    , galois-fft           >=0.1.0    && <0.2
-    , galois-field         >=1.0.0    && <1.1
-    , generic-arbitrary    >=0.1.0    && <0.2
-    , groups               >=0.4.1    && <0.5
-    , mtl                  >=2.2.2    && <2.3
-    , pairing              >=1.0.0    && <1.1
-    , poly                 >=0.3.2    && <0.4
-    , pretty-simple        >=2.0      && <3.3
-    , prettyprinter        >=1.2      && <1.6
-    , protolude            >=0.2.4    && <0.3
-    , QuickCheck           >=2.12.0   && <2.14
-    , semirings            >=0.5.0    && <0.6
-    , SHA                  >=1.6.4    && <1.7
-    , tasty                >=1.2      && <1.3
-    , tasty-discover       >=4.2.1    && <4.3
-    , tasty-hunit          >=0.10.0.0 && <0.11
-    , tasty-quickcheck     >=0.10.1   && <0.11
-    , text                 >=1.2      && <2.0
-    , vector               >=0.12.0   && <0.13
+      aeson                >=1.4.0  && <1.5
+    , arithmetic-circuits  >=0.2.0  && <0.3
+    , base                 >=4.12   && <4.14
+    , bytestring           >=0.10.8 && <0.11
+    , containers           >=0.6.0  && <0.7
+    , criterion            >=1.5.0  && <1.6
+    , crypto-numbers       >=0.2.7  && <0.3
+    , directory            >=1.3.3  && <1.4
+    , elliptic-curve       >=0.3.0  && <0.4
+    , entropy              >=0.4.1  && <0.5
+    , filepath             >=1.4.2  && <1.5
+    , galois-fft           >=0.1.0  && <0.2
+    , galois-field         >=1.0.0  && <1.1
+    , generic-arbitrary    >=0.1.0  && <0.2
+    , groups               >=0.4.1  && <0.5
+    , mtl                  >=2.2.2  && <2.3
+    , pairing              >=1.0.0  && <1.1
+    , poly                 >=0.3.2  && <0.4
+    , pretty-simple        >=2.0    && <3.3
+    , prettyprinter        >=1.2    && <1.7
+    , protolude            >=0.2.4  && <0.4
+    , QuickCheck
+    , semirings            >=0.5.0  && <0.6
+    , SHA                  >=1.6.4  && <1.7
+    , tasty
+    , tasty-discover
+    , tasty-hunit
+    , tasty-quickcheck
+    , text                 >=1.2    && <2.0
+    , vector               >=0.12.0 && <0.13
     , zkp
+
+  default-language:   Haskell2010
